--- a/app/content/security/03.yml
+++ b/app/content/security/03.yml
@@ -3,7 +3,7 @@ Governance:
     requirements: The consumer should have sufficient confidence that the governance framework and processes in place for the service are appropriate for their intended use of it.
     filters: The consumer should have sufficient confidence that the governance framework and processes in place for the service are appropriate for their intended use of it.
     label: Governance Framework
-    relevantCategories: SaaS, PaaS, IaaS
+    dependsOnLots: SaaS, PaaS, IaaS
     fields:
       - type: boolean
         validation: boolean
