--- a/app/content/security/13.yml
+++ b/app/content/security/13.yml
@@ -3,7 +3,7 @@ Secure use of the service by the customer:
     requirements: The consumer understands any service configuration options available to them and the security implications of choices they make.
     filters: The consumer understands any service configuration options available to them and the security implications of choices they make.
     label: Device access method
-    relevantCategories: SaaS, PaaS, IaaS
+    dependsOnLots: SaaS, PaaS, IaaS
     fields:
       - type: radios
         options:
@@ -11,11 +11,23 @@ Secure use of the service by the customer:
           - "Partner devices"
           - "Unknown devices"
       - type: assurance
+  "Do you provide on-boarding guidance, including impacts on the consumer’s security?":
+    requirements: The consumer understands the security requirements on their processes, uses, and infrastructure related to the use of the service.
+    filters: The consumer understands the security requirements on their processes, uses, and infrastructure related to the use of the service.
+    label: None
+    dependsOnLots: PaaS, IaaS
+    fields:
+      - type: radios
+        options:
+          - "Yes"
+          - "No"
+          - "N/A"
+      - type: assurance
   "Do you provide user or administrator training on the use of the service and its security?":
     requirements: The consumer can educate those administrating and using the service in how to use it safely and securely.
     filters: The consumer can educate those administrating and using the service in how to use it safely and securely.
     label: None
-    relevantCategories: SaaS, PaaS, IaaS
+    dependsOnLots: SaaS, PaaS, IaaS
     fields:
       - type: boolean
         validation: boolean
