--- a/app/content/security/10.yml
+++ b/app/content/security/10.yml
@@ -3,7 +3,7 @@ External interface protection:
     requirements: The consumer understands how to safely connect to the service whilst minimising risk to the consumer’s systems.
     filters: The consumer understands how to safely connect to the service whilst minimising risk to the consumer’s systems.
     label: None
-    relevantCategories: PaaS, IaaS
+    dependsOnLots: PaaS, IaaS
     fields:
       - type: boolean
         validation: boolean
@@ -14,7 +14,7 @@ External interface protection:
     requirements: The consumer understands what physical and logical interfaces their information is available from.
     filters: The consumer understands what physical and logical interfaces their information is available from.
     label: None
-    relevantCategories: PaaS, IaaS
+    dependsOnLots: PaaS, IaaS
     fields:
       - type: radios
         options:
@@ -27,7 +27,7 @@ External interface protection:
     requirements: The consumer has sufficient confidence that protections are in place to control access to their data.
     filters: The consumer has sufficient confidence that protections are in place to control access to their data.
     label: None
-    relevantCategories: SaaS, PaaS, IaaS
+    dependsOnLots: SaaS, PaaS, IaaS
     fields:
       - type: boolean
         validation: boolean
@@ -38,7 +38,7 @@ External interface protection:
     requirements: The consumer has sufficient confidence that the service can determine the identity of connecting users and services to an appropriate level for the data or function being accessed.
     filters: The consumer has sufficient confidence that the service can determine the identity of connecting users and services to an appropriate level for the data or function being accessed.
     label: None
-    relevantCategories: SaaS, PaaS, IaaS
+    dependsOnLots: SaaS, PaaS, IaaS
     fields:
       - type: boolean
         validation: boolean
