--- a/app/content/security/12.yml
+++ b/app/content/security/12.yml
@@ -3,7 +3,7 @@ Audit information provision to consumers:
     requirements: Consumers are aware of the audit information that will be provided to them, how and when it will be made available to them, the format of the data, and the retention period associated with it.
     filters: Consumers are aware of the audit information that will be provided to them, how and when it will be made available to them, the format of the data, and the retention period associated with it.
     label: Audit information
-    relevantCategories: SaaS, PaaS, IaaS
+    dependsOnLots: SaaS, PaaS, IaaS
     fields:
       - type: radios
         options:
